# upp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  SConstruct  common.mk  demo.cpp  meson.build  meson.options
codec/: Makefile  meson.build
codec/include/upp/codec/: decoder.hpp  demux.hpp  frame.hpp  hwaccel.hpp  packet.hpp  util.hpp
codec/include/upp/codec/detail/: exceptions.hpp  forward.hpp  internal.hpp
codec/lib/: decoder.cpp  demux.cpp  frame.cpp  hwaccel.cpp  logger.hpp  meson.build  packet.cpp  util.cpp
codec/lib/detail/: exceptions.cpp  meson.build
codec/test/: meson.build
codec/test/manual/: hwaccel.cpp  meson.build  void_player.cpp
core/: meson.build
core/include/upp/: bitmask.hpp  bitset.hpp  cast.hpp  cleanup.hpp  concepts.hpp  cstr.hpp  enum.hpp  enum_array.hpp  enum_set.hpp  exceptions.hpp  flexible.hpp  frac.hpp  guard.hpp  immovable.hpp  int.hpp  intrusive_list.hpp  maybe.hpp  queue.hpp  ring_buffer.hpp  strlit.hpp  template_str.hpp  terminal.hpp  uncopyable.hpp  visit.hpp
core/include/upp/detail/: allocator_holder.hpp  feature.hpp
core/lib/: exceptions.cpp
core/test/: bitmask.cpp  bitset.cpp  cleanup.cpp  enum_array.cpp  enum_set.cpp  flexible.cpp  guard.cpp  intrusive_list.cpp  maybe.cpp  meson.build  queue.cpp  ring_buffer.cpp  strlit.cpp  template_str.cpp  visit.cpp
coro/: Makefile  meson.build
coro/include/upp/coro/: detach.hpp  task.hpp  test.hpp  yield.hpp
coro/lib/: meson.build
coro/test/: detach.cpp  meson.build  task.cpp
fs/: Makefile  meson.build
fs/include/upp/fs/: file.hpp  monitor.hpp  tmpfile.hpp
fs/lib/: file.cpp  meson.build  monitor.cpp  tmpfile.cpp
fs/test/: file.cpp  meson.build  tempdir.cpp
include/upp/: async.hpp  cli.hpp  dualbuf.hpp  function.hpp  parser.hpp  property_tree.hpp  strutil.hpp  sync.hpp  timer.hpp  traits.hpp  util.hpp
include/upp/cli/: optcontainer.hpp  parser.hpp  token.hpp  value.hpp  vectvalue.hpp
include/upp/detail/cli/: cmd.hpp  convert.hpp  enum.hpp  exception.hpp  helpgen.hpp  opt.hpp  parse.hpp  posargs.hpp  value.hpp
include/upp/impl/async/: continuousjob.hpp  detail.hpp  executor.hpp  fiberexecutor.hpp  fifoexecutor.hpp  intervaljob.hpp  job.hpp  overridingjob.hpp  schedulable.hpp  syncjob.hpp
include/upp/impl/cli/: cmd.hpp  convert.hpp  enum.hpp  exception.hpp  helpgen.hpp  opt.hpp  posargs.hpp  value.hpp
include/upp/impl/math/: cmp.hpp  columnview.hpp  diagmat.hpp  mat.hpp  matadd.hpp  matmul.hpp  matsub.hpp  rowview.hpp  transpose.hpp
include/upp/impl/math/detail/: conv.hpp  traits.hpp
include/upp/impl/parser/: ast.hpp  ctx.hpp  factory.hpp  joined.hpp  kleeneplus.hpp  kleenestar.hpp  lit.hpp  matcher.hpp  optional.hpp  or.hpp  parse.hpp  regex.hpp  result.hpp  type_traits.hpp
include/upp/impl/parser/detail/: cbholder.hpp  ctx.hpp  type_traits.hpp
include/upp/impl/property_tree/: node.hpp
include/upp/impl/strutil/: strutil.hpp
include/upp/impl/sync/: mutexguard.hpp  mutextryguard.hpp  mutexwrap.hpp  rwwrap.hpp
include/upp/impl/timer/: interval.hpp  oneshot.hpp
include/upp/impl/traits/: callable_prototype.hpp  callable_traits.hpp
include/upp/impl/util/: defer.hpp
include/upp/math/: mat.hpp
include/upp/sync/: fifo.hpp  mutextryguard.hpp  mutexwrap.hpp  thread.hpp
lib/: meson.build
lib/async/: meson.build
lib/async/include/: meson.build
lib/async/include/upp/: async.hpp
lib/async/include/upp/bits/async/: channel.hpp  ctx.hpp  job.hpp  main.hpp  mutex.hpp  scheduler.hpp  semaphore.hpp  task.hpp  unique_handle.hpp  util.hpp  yield.hpp
lib/async/lib/: meson.build  scheduler.cpp  util.cpp
lib/core/: meson.build
lib/core/include/upp/: concepts.hpp  enums.hpp  functional.hpp  ranges.hpp  str.hpp  sync.hpp  type_traits.hpp  types.hpp  util.hpp
lib/core/include/upp/bits/: concepts.hpp  ranges.hpp  type_traits.hpp
lib/core/include/upp/bits/enums/: bitmask.hpp  cast.hpp  map.hpp
lib/core/include/upp/bits/functional/: callback.hpp  function.hpp  static_function.hpp
lib/core/include/upp/bits/str/: c_string.hpp  const_string.hpp  util.hpp  (+1 more)
lib/net/: meson.build
lib/net/include/upp/: net.hpp
lib/net/lib/: meson.build  route.cpp
linux/: Makefile  meson.build
linux/include/upp/linux/: signal.hpp
linux/lib/: meson.build  signal.cpp
linux/test/: meson.build  signal.cpp
logs/: Makefile  meson.build
logs/include/upp/: logs.hpp
logs/lib/: logs.cpp  meson.build
logs/test/: logs.cpp  manual.cpp  meson.build
rest/: Makefile  meson.build
rest/include/upp/rest/: endpoint.hpp  method.hpp  path_pattern.hpp  request.hpp  response.hpp  server.hpp  service.hpp
rest/lib/: endpoint.cpp  logger.hpp  meson.build  server.cpp
rest/test/: meson.build  path_pattern.cpp
samples/: CMakeLists.txt  SConscript  async.cpp  cliparser.cpp  parser.cpp  sample.json
scripts/: insert-licensing.py
src/: SConscript  convert.cpp
src/cli/: convert.cpp  parser.cpp  value.cpp
src/detail/cli/: helpgen.cpp
src/impl/cli/: helpgen.cpp  opt.cpp
subprojects/: magic_enum.wrap  stdexec.wrap
test/unit/: meson.build
test/unit/async/: channel.cpp  main.cpp  meson.build  mutex.cpp  semaphore.cpp  task.cpp  yield.cpp
test/unit/core/: concepts.cpp  enums.cpp  functional.cpp  meson.build  ranges.cpp  str.cpp  sync.cpp  util.cpp
test/unit/core/types/: meson.build  queue.cpp  ring_buf.cpp
test/unit/net/: meson.build  route.cpp
unit-test/: CMakeLists.txt  SConscript  main.cpp
unit-test/async/: job.cpp
unit-test/cli/: optcontainer.cpp  parse_simple.cpp  parser.cpp  tokenize.cpp  value.cpp
unit-test/dualbuf/: dualbuf.cpp
unit-test/function/: function.cpp
unit-test/math/: mat.cpp
unit-test/parser/: complex.cpp  factory.cpp  fixture.hpp  joined.cpp  kleeneplus.cpp  kleenestar.cpp  literal.cpp  optional.cpp  or.cpp  parser.cpp  regex.cpp
unit-test/property_tree/: property_tree.cpp
unit-test/strutil/: strutil.cpp
unit-test/sync/: fifo.cpp  mutexwrap.cpp  rwwrap.cpp
unit-test/timer/: interval.cpp  oneshot.cpp
unit-test/traits/: traits.cpp
unit-test/util/: convert.cpp  defer.cpp
(+13 files in other folders)
